
syntax = 'proto3';
package athena.auth2;
option go_package = "athena/api/v1/auth2";

message Auth2AuthRequest {
    string service = 1;
}

message Auth2AuthResponse {
    string service = 1;
    bool status = 3;
}

message Auth2LoginRequest {
    string account = 1;
    string password = 2;
    string code = 3;
}

message Auth2LoginResponse {
    string token = 1;
    string account = 2;
    string name = 3;
    bool status = 4;
}

message Auth2RegistRequest {
    string account = 1;
    string password = 2;
}

message Auth2RegistResponse {
    bool status = 1;
}